--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="feature-item bg-light rounded text-center p-4">
                             <i class="fa fa-3x fa-search text-primary mb-4"></i>
                             <h5 class="mb-3">SEO & Backlinks</h5>
-                            <p class="m-0">**SEO (Search Engine Optimization)** enhances your website’s visibility on search engines to attract organic traffic. **Backlinks** are links from other websites that boost your site’s authority and improve its search rankings.</p>
+                            <p class="m-0">SEO (Search Engine Optimization) enhances your website’s visibility on search engines to attract organic traffic. Backlinks are links from other websites that boost your site’s authority and improve its search rankings.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
@@ -608,5 +608,6 @@
 
 
 </html>
+
 
 
