--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <div class="feature-item bg-light rounded text-center p-4">
                             <i class="fa fa-3x fa-laptop-code text-primary mb-4"></i>
                             <h5 class="mb-3">Design & Development</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">we create stunning designs and powerful websites that make an impact. Our creative design team crafts user-centered visuals, while our development experts build fast, secure, and scalable digital experiences.</p>
                         </div>
                     </div>
                 </div>
@@ -213,7 +213,7 @@
                                 <i class="fa fa-search fa-2x"></i>
                             </div>
                             <h5 class="mb-3">SEO Optimization</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">we create stunning designs and powerful websites that make an impact. Our creative design team crafts user-centered visuals, while our development experts build fast, secure, and scalable digital experiences.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -608,6 +608,7 @@
 
 
 </html>
+
 
 
 
