--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <div class="feature-item bg-light rounded text-center p-4">
                             <i class="fa fa-3x fa-laptop-code text-primary mb-4"></i>
                             <h5 class="mb-3">Design & Development</h5>
-                            <p class="m-0">we create stunning designs and powerful websites that make an impact. Our creative design team crafts user-centered visuals, while our development experts build fast, secure, and scalable digital experiences.</p>
+                            <p class="m-0">With over 10 years of experience, we use data-driven techniques and the latest SEO tools to ensure your business stays ahead of the competition.</p>
                         </div>
                     </div>
                 </div>
@@ -608,6 +608,7 @@
 
 
 </html>
+
 
 
 
