--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                 <i class="fa fa-search fa-2x"></i>
                             </div>
                             <h5 class="mb-3">SEO Optimization</h5>
-                            <p class="m-0">we create stunning designs and powerful websites that make an impact. Our creative design team crafts user-centered visuals, while our development experts build fast, secure, and scalable digital experiences.</p>
+                            <p class="m-0">With over 10 years of experience, we use data-driven techniques and the latest SEO tools to ensure your business stays ahead of the competition.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -608,6 +608,7 @@
 
 
 </html>
+
 
 
 
