--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                 <i class="fa fa-laptop-code fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Web Design</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">we craft visually stunning, user-friendly websites that leave a lasting impression. Our web design focuses on responsive layouts, intuitive navigation, and brand-centric visuals to engage visitors and drive conversions.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -608,6 +608,7 @@
 
 
 </html>
+
 
 
 
