--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                 <i class="fab fa-facebook-f fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Social Media Marketing</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">we help businesses connect, engage, and grow on platforms like Facebook, Instagram, LinkedIn, and Twitter. Our data-driven strategies combine creative content, targeted ads, and community engagement to increase brand awareness and drive conversions.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -608,6 +608,7 @@
 
 
 </html>
+
 
 
 
