--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                 <i class="fa fa-mail-bulk fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Email Marketing</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">we design targeted email campaigns that engage your audience and drive measurable results. From personalized newsletters to promotional campaigns, we use segmentation, automation, and analytics to ensure every email hits the right inbox at the right time.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -253,7 +253,7 @@
                                 <i class="fa fa-thumbs-up fa-2x"></i>
                             </div>
                             <h5 class="mb-3">PPC Advertising</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">we design targeted email campaigns that engage your audience and drive measurable results. From personalized newsletters to promotional campaigns, we use segmentation, automation, and analytics to ensure every email hits the right inbox at the right time.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -608,6 +608,7 @@
 
 
 </html>
+
 
 
 
