--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                 <i class="fab fa-android fa-2x"></i>
                             </div>
                             <h5 class="mb-3">App Development</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">we design and develop custom mobile applications for iOS and Android that are fast, secure, and user-friendly. From concept to deployment, our team ensures your app delivers exceptional performance, seamless UX, and scalable solutions.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -608,6 +608,7 @@
 
 
 </html>
+
 
 
 
