--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="row g-5 align-items-end">
                         <div class="col-lg-6 text-center text-lg-start">
                             <h2 class="text-white mb-4 animated slideInDown">A Digital Agency Of Inteligents & Creative People</h1>
-                            <p class="text-white pb-3 animated slideInDown">A Digital Agency of intelligent and creative minds, crafting innovative solutions that inspire growth. Where strategy meets imagination to build brands that stand out in the digital world.</p>
+                            <p class="text-white pb-3 animated slideInDown">A Digital Agency of intelligent and creative minds, crafting innovative solutions that inspire growth. As the Best Digital Marketing Company in Chennai, we bring together strategy and imagination to build brands that stand out in the digital world. If you’re looking for the Best Digital Marketing Company in Chennai to elevate your brand, our expert team delivers impactful results through creativity and data-driven execution.</p>
                             <a href="" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Read More</a>
                             <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact Us</a>
                         </div>
@@ -608,6 +608,7 @@
 
 
 </html>
+
 
 
 
