--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>DGital - Digital Agency HTML Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
+    
+  <!-- Primary Meta Tags -->
+  <title>Best Digital Marketing Company in Chennai</title>
+  <meta name="title" content="Best Digital Marketing Company in Chennai">
+  <meta name="description" content="Best Digital Marketing Company in Chennai helping brands grow with SEO, social media, and creative strategies that deliver real results.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tamilselvang.netlify.app/">
+  <meta property="og:title" content="Best Digital Marketing Company in Chennai">
+  <meta property="og:description" content="Best Digital Marketing Company in Chennai helping brands grow with SEO, social media, and creative strategies that deliver real results.">
+  <meta property="og:image" content="https://tamilselvang.netlify.app/img/hero.png">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://tamilselvang.netlify.app/">
+  <meta property="twitter:title" content="Best Digital Marketing Company in Chennai">
+  <meta property="twitter:description" content="Best Digital Marketing Company in Chennai helping brands grow with SEO, social media, and creative strategies that deliver real results.">
+  <meta property="twitter:image" content="https://tamilselvang.netlify.app/img/hero.png">
+  
+  <!-- Optional Meta Tags -->
+  <meta name="keywords" content="best digital marketing company in chennai">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="1 day days">
+  <meta name="author" content="Tamilselvan">
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -608,6 +629,7 @@
 
 
 </html>
+
 
 
 
