--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<link rel="canonical" href="https://tamilselvang.netlify.app/" />
     
   <!-- Primary Meta Tags -->
   <title>Best Digital Marketing Company in Chennai</title>
@@ -629,6 +630,7 @@
 
 
 </html>
+
 
 
 
