--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<link rel="canonical" href="https://tamilselvang.netlify.app/about" />
     <meta charset="utf-8">
     <title>DGital - Digital Agency HTML Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -362,4 +363,5 @@
 
 
 </html>
+
 
