--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<link rel="canonical" href="https://tamilselvang.netlify.app/contact" />
     <meta charset="utf-8">
     <title>DGital - Digital Agency HTML Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -243,5 +244,6 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
