--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <a href="" class="btn btn-primary py-sm-3 px-sm-5 rounded-pill mt-3">Read More</a>
                     </div>
                     <div class="col-lg-6">
-                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/about.png">
+                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/about.png" alt="top 10 company" title="top 10 digital marketing company">
                     </div>
                 </div>
             </div>
@@ -630,6 +630,7 @@
 
 
 </html>
+
 
 
 
