--- a/index.html
+++ b/index.html
@@ -197,22 +197,22 @@
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
                         <i class="fa fa-certificate fa-3x text-secondary mb-3"></i>
-                        <h2 class="text-white mb-2" data-toggle="counter-up">1234</h2>
+                        <h2 class="text-white mb-2" data-toggle="counter-up">10</h2>
                         <p class="text-white mb-0">Years Experience</p>
                     </div>
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
                         <i class="fa fa-users-cog fa-3x text-secondary mb-3"></i>
-                        <h2 class="text-white mb-2" data-toggle="counter-up">1234</h2>
+                        <h2 class="text-white mb-2" data-toggle="counter-up">1256</h2>
                         <p class="text-white mb-0">Team Members</p>
                     </div>
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
                         <i class="fa fa-users fa-3x text-secondary mb-3"></i>
-                        <h2 class="text-white mb-2" data-toggle="counter-up">1234</h2>
+                        <h2 class="text-white mb-2" data-toggle="counter-up">1000+</h2>
                         <p class="text-white mb-0">Satisfied Clients</p>
                     </div>
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                         <i class="fa fa-check fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+                        <h2 class="text-white mb-2" data-toggle="counter-up">1000+</h2>
                         <p class="text-white mb-0">Compleate Projects</p>
                     </div>
                 </div>
@@ -630,6 +630,7 @@
 
 
 </html>
+
 
 
 
