--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
                                 </div>
                             </div>
                             <div class="bg-light p-4">
-                                <p class="text-primary fw-medium mb-2">UI / UX Design</p>
-                                <h5 class="lh-base mb-0">Digital Agency Website Design And Development</a>
+                                
+                                <h5 class="lh-base mb-0">Content Marketing</a>
                             </div>
                         </div>
                     </div>
@@ -630,6 +630,7 @@
 
 
 </html>
+
 
 
 
