--- a/index.html
+++ b/index.html
@@ -2,6 +2,33 @@
 <html lang="en">
 
 <head>
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://tamilselvang.netlify.app/"
+  },
+  "headline": "A Digital Agency Of Inteligents & Creative People",
+  "image": "https://tamilselvang.netlify.app/img/hero.png",  
+  "author": {
+    "@type": "Organization",
+    "name": "Tamilselvan",
+    "url": "https://tamilselvang.netlify.app/"
+  },  
+  "publisher": {
+    "@type": "Organization",
+    "name": "tamilselvan",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://tamilselvang.netlify.app/"
+    }
+  },
+  "datePublished": "2025-11-14",
+  "dateModified": "2025-11-30"
+}
+</script>
 	<link rel="canonical" href="https://tamilselvang.netlify.app/" />
     
   <!-- Primary Meta Tags -->
@@ -630,6 +657,7 @@
 
 
 </html>
+
 
 
 
