--- a/about.html
+++ b/about.html
@@ -2,6 +2,28 @@
 <html lang="en">
 
 <head>
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org/", 
+  "@type": "BreadcrumbList", 
+  "itemListElement": [{
+    "@type": "ListItem", 
+    "position": 1, 
+    "name": "home",
+    "item": "https://tamilselvang.netlify.app/"  
+  },{
+    "@type": "ListItem", 
+    "position": 2, 
+    "name": "project",
+    "item": "https://tamilselvang.netlify.app/project"  
+  },{
+    "@type": "ListItem", 
+    "position": 3, 
+    "name": "contact",
+    "item": "https://tamilselvang.netlify.app/contact"  
+  }]
+}
+</script>
 	<link rel="canonical" href="https://tamilselvang.netlify.app/about" />
     <meta charset="utf-8">
     <title>DGital - Digital Agency HTML Template</title>
@@ -83,8 +105,8 @@
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-center">
                                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                                    <li class="breadcrumb-item text-white active" aria-current="page">About</li>
+                                    <li class="breadcrumb-item"><a class="text-white" href="#">Project</a></li>
+                                    <li class="breadcrumb-item text-white active" aria-current="page">contact</li>
                                 </ol>
                             </nav>
                         </div>
@@ -363,6 +385,7 @@
 
 
 </html>
+
 
 
 
