--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
 	<script type="application/ld+json">
 {
   "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [{
+    "@type": "Question",
+    "name": "what is the highest paying job ?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Digital marketing is the strategic promotion of products, services, or brands through online platforms such as search engines, social media, email, and websites. It combines creativity with data-driven strategies to attract, engage, and convert audiences. From SEO and content marketing to social media ads and analytics, digital marketing helps businesses grow by reaching the right people at the right time with measurable results."
+    }
+  },{
+    "@type": "Question",
+    "name": "can digital marketers make a lot of money?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "SEO, paid advertising, content strategy, and analytics. Skilled professionals and agency owners often earn six-figure incomes, and top digital marketing consultants or freelancers can make even more by managing multiple clients or creating scalable online businesses."
+    }
+  },{
+    "@type": "Question",
+    "name": "is a digital marketer career worth it ?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "It offers high income potential, creative freedom, flexible work options, and the chance to work across industries. Whether you’re into social media, SEO, content creation, or paid ads, digital marketing provides endless opportunities for learning, growth, and long-term career success."
+    }
+  }]
+}
+</script>
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
   "@type": "Article",
   "mainEntityOfPage": {
     "@type": "WebPage",
@@ -127,7 +155,7 @@
                     <div class="row g-5 align-items-end">
                         <div class="col-lg-6 text-center text-lg-start">
                             <h1 class="text-white mb-4 animated slideInDown">A Digital Agency Of Inteligents & Creative People</h1>
-                            <p class="text-white pb-3 animated slideInDown">A Digital Agency of intelligent and creative minds, crafting innovative solutions that inspire growth. As the Best Digital Marketing Company in Chennai</a>, we bring together strategy and imagination to build brands that stand out in the digital world. If you’re looking for the Best Digital Marketing Company in Chennai to elevate your brand, our expert team delivers impactful results through creativity and data-driven execution.</p>
+                            <p class="text-white pb-3 animated slideInDown">Digital marketing is the strategic promotion of products, services, or brands through online platforms such as search engines, social media, email, and websites. It combines creativity with data-driven strategies to attract, engage, and convert audiences. From SEO and content marketing to social media ads and analytics, digital marketing helps businesses grow by reaching the right people at the right time with measurable results.</p>
                             <a href="https://tamilselvang.netlify.app/about" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Read More</a>
                             <a href="https://tamilselvang.netlify.app/contact" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact Us</a>
                         </div>
@@ -657,6 +685,7 @@
 
 
 </html>
+
 
 
 
