--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,73 @@
 <html lang="en">
 
 <head>
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "HowTo",
+  "name": "How to Start Digital Marketing",
+  "description": "Learn step-by-step how to start and grow in digital marketing. This guide covers everything from understanding SEO and social media marketing to building a strong online presence and generating leads. Perfect for beginners and business owners who want to promote their brand online effectively.",
+  "totalTime": "PT2H",
+  "estimatedCost": {
+    "@type": "MonetaryAmount",
+    "currency": "INR",
+    "value": "0"
+  },
+  "supply": [
+    {
+      "@type": "HowToSupply",
+      "name": "Laptop or Smartphone"
+    },
+    {
+      "@type": "HowToSupply",
+      "name": "Internet Connection"
+    }
+  ],
+  "tool": [
+    {
+      "@type": "HowToTool",
+      "name": "Google Analytics"
+    },
+    {
+      "@type": "HowToTool",
+      "name": "SEO Tools (Ahrefs, SEMrush, or Ubersuggest)"
+    }
+  ],
+  "step": [
+    {
+      "@type": "HowToStep",
+      "name": "Step 1: Learn the Basics",
+      "text": "Understand core concepts like SEO, social media marketing, content creation, and online advertising. Take free or paid online courses to build your foundation."
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Step 2: Choose Your Niche",
+      "text": "Decide which area of digital marketing you want to focus on — SEO, content, email, or paid ads — based on your interests and skills."
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Step 3: Create a Website or Portfolio",
+      "text": "Build your own website or digital portfolio to showcase your skills, campaigns, and projects."
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Step 4: Practice and Experiment",
+      "text": "Run small campaigns, analyze performance, and learn from real-world experience using tools like Google Ads and Meta Ads Manager."
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Step 5: Build a Personal Brand",
+      "text": "Use LinkedIn, Instagram, and YouTube to share your work and attract clients or job opportunities."
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Step 6: Stay Updated",
+      "text": "Digital marketing trends change quickly. Follow blogs, attend webinars, and keep learning new tools and strategies."
+    }
+  ]
+}
+</script>
+
 	<link rel="canonical" href="https://tamilselvang.netlify.app/contact" />
     <meta charset="utf-8">
     <title>DGital - Digital Agency HTML Template</title>
@@ -247,3 +314,4 @@
 
 
 </html>
+
