--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,14 @@
     "currency": "INR",
     "value": "3"
   },
+  "supply": {
+    "@type": "HowToSupply",
+    "name": "laptop  internet connection"
+  },
+  "tool": {
+    "@type": "HowToTool",
+    "name": "Google Ads, Canva, SEMrush"
+  },
   "step": [{
     "@type": "HowToStep",
     "text": "How to start a career in digital marketing?",
@@ -27,7 +35,6 @@
   }]    
 }
 </script>
-	
 
 	<link rel="canonical" href="https://tamilselvang.netlify.app/contact" />
     <meta charset="utf-8">
@@ -274,5 +281,6 @@
 
 
 </html>
+
 
 
