--- a/contact.html
+++ b/contact.html
@@ -4,38 +4,73 @@
 <head>
 	<script type="application/ld+json">
 {
-  "@context": "https://schema.org/", 
-  "@type": "HowTo", 
-  "name": "digital marketing",
-  "description": "Learn step-by-step how to start and grow in digital marketing. This guide covers everything from understanding SEO and social media marketing to building a strong online presence and generating leads. Perfect for beginners and business owners who want to promote their brand online effectively.",
-  "totalTime": "PT3M",
+  "@context": "https://schema.org",
+  "@type": "HowTo",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://tamilselvang.netlify.app/contact"
+  },
+  "name": "How to Contact a Digital Marketing Expert",
+  "description": "Follow these simple steps to get in touch with our digital marketing expert for inquiries, services, or consultations. Quick response and professional support guaranteed.",
+  "image": "https://tamilselvang.netlify.app/images/contact-digital-marketing.jpg",
+  "totalTime": "PT2M",
   "estimatedCost": {
     "@type": "MonetaryAmount",
     "currency": "INR",
-    "value": "3"
+    "value": "0"
   },
-  "supply": {
-    "@type": "HowToSupply",
-    "name": "laptop  internet connection"
-  },
-  "tool": {
-    "@type": "HowToTool",
-    "name": "Google Ads, Canva, SEMrush"
-  },
-  "step": [{
-    "@type": "HowToStep",
-    "text": "How to start a career in digital marketing?",
-    "name": "digital marketing",
-    "url": "https://tamilselvang.netlify.app/contact"
-  },{
-    "@type": "HowToStep",
-    "text": "How to measure success in digital marketing campaigns?",
-    "name": "digital marketing",
-    "url": "https://tamilselvang.netlify.app/contact"
-  }]    
+  "supply": [
+    {
+      "@type": "HowToSupply",
+      "name": "Laptop or Smartphone"
+    },
+    {
+      "@type": "HowToSupply",
+      "name": "Internet Connection"
+    }
+  ],
+  "tool": [
+    {
+      "@type": "HowToTool",
+      "name": "Web Browser"
+    },
+    {
+      "@type": "HowToTool",
+      "name": "Contact Form on Tamil Selvang Website"
+    }
+  ],
+  "step": [
+    {
+      "@type": "HowToStep",
+      "name": "Step 1: Visit the Contact Page",
+      "text": "Go to the official Tamil Selvang website and open the Contact page at https://tamilselvang.netlify.app/contact.",
+      "url": "https://tamilselvang.netlify.app/contact",
+      "image": "https://tamilselvang.netlify.app/images/step1-contact.jpg"
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Step 2: Fill Out the Contact Form",
+      "text": "Enter your name, email address, and message with your digital marketing needs or questions.",
+      "image": "https://tamilselvang.netlify.app/images/step2-form.jpg"
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Step 3: Submit Your Message",
+      "text": "Click on the Submit or Send button to send your query directly to the Tamil Selvang team.",
+      "image": "https://tamilselvang.netlify.app/images/step3-submit.jpg"
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Step 4: Wait for a Response",
+      "text": "You will receive a response via email or phone shortly, based on your provided contact details.",
+      "image": "https://tamilselvang.netlify.app/images/step4-response.jpg"
+    }
+  ]
 }
 </script>
 
+	
+	
 	<link rel="canonical" href="https://tamilselvang.netlify.app/contact" />
     <meta charset="utf-8">
     <title>DGital - Digital Agency HTML Template</title>
@@ -281,6 +316,7 @@
 
 
 </html>
+
 
 
 
