--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,68 @@
 <html lang="en">
 
 <head>
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "JobPosting",
+  "title": "trainer",
+  "description": "We are seeking a knowledgeable and passionate Digital Marketing Trainer to educate students and professionals on the latest digital marketing strategies, tools, and best practices. The ideal candidate should have hands-on experience in real-world digital marketing projects and a strong ability to simplify complex concepts.",
+  "identifier": {
+    "@type": "PropertyValue",
+    "name": "dgital",
+    "value": "HR"
+  },
+  "hiringOrganization" : {
+    "@type": "Organization",
+    "name": "dgital",
+    "sameAs": "https://tamilselvang.netlify.app/"
+  },
+  "employmentType": "FULL_TIME",
+  "workHours": "9am-5pm",
+  "datePosted": "2025-11-18",
+  "validThrough": "2025-11-25",
+  "jobLocation": {
+    "@type": "Place",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Sevvel bakery Post office jaihindpuram madurai",
+      "addressLocality": "Madurai",
+      "postalCode": "625011",
+      "addressCountry": "IN"
+    }
+  },
+  "baseSalary": {
+    "@type": "MonetaryAmount",
+    "currency": "INR",
+    "value": {
+      "@type": "QuantitativeValue",
+      "minValue": 15000,
+      "maxValue": 15000,
+      "unitText": "MONTH"
+    }
+  },
+  "responsibilities": "Deliver training sessions on SEO, SEM, Social Media Marketing, Email Marketing, Content Marketing, Web Analytics, and other digital marketing modules.
+
+Develop engaging training content, lesson plans, PPTs, quizzes, and assignments.
+
+Provide hands-on training using tools such as Google Ads, Google Analytics, Search Console, Meta Ads Manager, Canva, and other industry platforms.",
+  "skills": "Strong knowledge of SEO (On-page, Off-page, Technical SEO)
+
+Google Ads & PPC Campaign Management
+
+Meta Ads Manager (Facebook & Instagram Ads)
+
+Social Media Strategy & Content Planning
+
+Google Analytics, Search Console & Data Interpretation
+
+Email Marketing & Automation Tools",
+  "qualifications": "Bachelor’s degree in Marketing, Business Administration, Mass Communication, or any related field (preferred, but not mandatory).
+
+MBA in Marketing is an added advantage (optional).",
+  "experienceRequirements": "0-2 years"
+}
+</script>
 	
 	
 	
@@ -250,6 +312,7 @@
 
 
 </html>
+
 
 
 
