--- a/about.html
+++ b/about.html
@@ -4,6 +4,39 @@
 <head>
 	<script type="application/ld+json">
 {
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Tamil Selvan",
+  "image": "",
+  "@id": "",
+  "url": "https://tamilselvang.netlify.app/",
+  "telephone": "7449136784",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Sevvel bakery Post office jaihindpuram madurai",
+    "addressLocality": "Madurai",
+    "postalCode": "625011",
+    "addressCountry": "IN"
+  },
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday",
+      "Saturday",
+      "Sunday"
+    ],
+    "opens": "00:00",
+    "closes": "23:59"
+  },
+  "sameAs": "" 
+}
+</script>
+	<script type="application/ld+json">
+{
   "@context": "https://schema.org/", 
   "@type": "BreadcrumbList", 
   "itemListElement": [{
@@ -385,6 +418,7 @@
 
 
 </html>
+
 
 
 
