--- a/project.html
+++ b/project.html
@@ -5,6 +5,17 @@
 	<script type="application/ld+json">
 {
   "@context": "https://schema.org",
+  "@type": "ResearchProject",
+  "name": "digital marketing",
+  "alternateName": "dgital",
+  "url": "https://tamilselvang.netlify.app/project",
+  "logo": "",
+  "sameAs": "https://tamilselvang.netlify.app/"
+}
+</script>
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
   "@type": "Event",
   "name": "Digital marketing course",
   "image": "https://tamilselvang.netlify.app/img/portfolio-1.jpg",
@@ -337,4 +348,5 @@
 
 
 </html>
+
 
