--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
 <head>
 	<script type="application/ld+json">
 {
+  "@context": "https://schema.org/",
+  "@type": "Person",
+  "name": "tamilselvan",
+  "url": "https://tamilselvang.netlify.app/",
+  "image": "",
+  "sameAs": "https://tamilselvang.netlify.app/",
+  "jobTitle": "digital marketer",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "SLA"
+  }  
+}
+</script>
+	<script type="application/ld+json">
+{
   "@context": "https://schema.org",
   "@type": "FAQPage",
   "mainEntity": [{
@@ -685,6 +700,7 @@
 
 
 </html>
+
 
 
 
