--- a/service.html
+++ b/service.html
@@ -2,6 +2,35 @@
 <html lang="en">
 
 <head>
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org/", 
+  "@type": "Product", 
+  "name": "baggy jeans",
+  "image": "",
+  "description": "The high-quality fabric ensures durability, while the baggy cut provides maximum freedom of movement. Pair them with tees, oversized hoodies, or crop tops for a bold, fashion-forward look. Whether you’re stepping out casually or dressing up with accessories, Levi’s Baggy Jeans deliver unmatched comfort and style.",
+  "brand": {
+    "@type": "Brand",
+    "name": "levis"
+  },
+  "offers": {
+    "@type": "Offer",
+    "url": "",
+    "priceCurrency": "INR",
+    "price": "600",
+    "priceValidUntil": "2025-11-26",
+    "availability": "https://schema.org/OnlineOnly",
+    "itemCondition": "https://schema.org/NewCondition"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "bestRating": "7",
+    "worstRating": "3",
+    "ratingCount": "78467"
+  }
+}
+</script>
 	<link rel="canonical" href="https://tamilselvang.netlify.app/service" />
     <meta charset="utf-8">
     <title>DGital - Digital Agency HTML Template</title>
@@ -332,3 +361,4 @@
 
 
 </html>
+
