--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@
   "@type": "Product", 
   "name": "baggy jeans",
   "image": "",
-  "description": "The high-quality fabric ensures durability, while the baggy cut provides maximum freedom of movement. Pair them with tees, oversized hoodies, or crop tops for a bold, fashion-forward look. Whether you’re stepping out casually or dressing up with accessories, Levi’s Baggy Jeans deliver unmatched comfort and style.",
+  "description": "The high-quality fabric ensures durability, while the baggy cut provides maximum freedom of movement",
   "brand": {
     "@type": "Brand",
-    "name": "levis"
+    "name": "leviz"
   },
   "offers": {
     "@type": "Offer",
@@ -24,11 +24,29 @@
   },
   "aggregateRating": {
     "@type": "AggregateRating",
-    "ratingValue": "5",
+    "ratingValue": "4",
     "bestRating": "7",
     "worstRating": "3",
-    "ratingCount": "78467"
+    "ratingCount": "1",
+    "reviewCount": "1"
+  },
+  "review": {
+    "@type": "Review",
+    "name": "tamil",
+    "reviewBody": "",
+    "reviewRating": {
+      "@type": "Rating",
+      "ratingValue": "4",
+      "bestRating": "7",
+      "worstRating": "3"
+    },
+    "datePublished": "2025-11-10",
+    "author": {"@type": "Person", "name": "tamil"},
+    "publisher": {"@type": "Organization", "name": "tamil"}
   }
+}
+</script>
+	
 }
 </script>
 	<script type="application/ld+json">
@@ -447,6 +465,7 @@
 
 
 </html>
+
 
 
 
