--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     "@type": "Brand",
     "name": "leviz"
   },
+  "gtin8": "",
   "offers": {
     "@type": "Offer",
     "url": "",
@@ -44,6 +45,9 @@
     "author": {"@type": "Person", "name": "tamil"},
     "publisher": {"@type": "Organization", "name": "tamil"}
   }
+}
+</script>
+	
 }
 </script>
 	
@@ -465,6 +469,7 @@
 
 
 </html>
+
 
 
 
