--- a/project.html
+++ b/project.html
@@ -4,6 +4,228 @@
 <head>
 	<script type="application/ld+json">
 {
+  "@context": "https://schema.org/", 
+  "@type": "Recipe", 
+  "name": "briyani",
+  "image": "",
+  "description": "Ingredients
+For Marination
+
+Chicken – 500g
+
+Curd – ½ cup
+
+Ginger Garlic Paste – 1 tbsp
+
+Red Chilli Powder – 1 tbsp
+
+Turmeric – ½ tsp
+
+Garam Masala – 1 tsp
+
+Salt – as required
+
+Lemon Juice – 1 tbsp
+
+Oil – 1 tbsp
+
+Mint Leaves – handful
+
+Coriander Leaves – handful
+
+For Biryani Rice
+
+Basmati Rice – 2 cups (soak for 20 mins)
+
+Whole spices: Bay leaf, Cinnamon, Cloves, Cardamom
+
+Salt – 1 tsp
+
+For Cooking
+
+Onions – 2 large (thinly sliced)
+
+Tomatoes – 2 medium (chopped)
+
+Green Chillies – 2
+
+Mint & Coriander leaves – handful
+
+Oil – 3 tbsp
+
+Ghee – 1 tbsp
+
+Instructions
+1. Marinate the Chicken
+
+Mix all marination ingredients in a bowl, add chicken, and rest for 30 minutes (more time = better taste).
+
+2. Cook the Rice
+
+Boil 5–6 cups of water with whole spices and salt.
+
+Add soaked rice and cook till 70% cooked.
+
+Drain and keep aside.
+
+3. Prepare the Biryani Base
+
+Heat oil + ghee in a large pot.
+
+Add sliced onions and fry until golden brown.
+
+Add tomatoes, green chillies, and sauté well.
+
+Add the marinated chicken and cook for 10–12 minutes till oil separates.
+
+Add mint and coriander leaves.
+
+4. Layer the Biryani
+
+Keep the flame low.
+
+Add 1 layer of chicken masala.
+
+Add 1 layer of rice.
+
+Repeat until everything is used.
+
+Top with mint, coriander, fried onions, and 1 tbsp ghee.
+
+5. Dum Cooking (Final Steam)
+
+Seal the pot with a lid.
+
+Cook on low flame for 20–25 minutes.
+
+Turn off the flame and rest for 10 minutes.",
+  "keywords": "how to make briyani in 2 minutes",
+  "author": {
+    "@type": "Person",
+    "name": "tamil"
+  },
+  "datePublished": "2025-11-10",
+  "prepTime": "PT2M",
+  "cookTime": "PT4M", 
+  "totalTime": "PT6M", 
+  "recipeCategory": "appetizer", 
+  "recipeCuisine": "indian", 
+  "recipeYield": "4", 
+  "nutrition": {
+    "@type": "NutritionInformation",
+    "servingSize": "2",
+    "calories": "200 cal",
+    "fatContent": "20 g"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "bestRating": "12",
+    "worstRating": "6",
+    "ratingCount": "45365"
+  },
+  "video": {
+    "@type": "VideoObject",
+    "name": "briyani",
+    "description": "Ingredients
+For Marination
+
+Chicken – 500g
+
+Curd – ½ cup
+
+Ginger Garlic Paste – 1 tbsp
+
+Red Chilli Powder – 1 tbsp
+
+Turmeric – ½ tsp
+
+Garam Masala – 1 tsp
+
+Salt – as required
+
+Lemon Juice – 1 tbsp
+
+Oil – 1 tbsp
+
+Mint Leaves – handful
+
+Coriander Leaves – handful
+
+For Biryani Rice
+
+Basmati Rice – 2 cups (soak for 20 mins)
+
+Whole spices: Bay leaf, Cinnamon, Cloves, Cardamom
+
+Salt – 1 tsp
+
+For Cooking
+
+Onions – 2 large (thinly sliced)
+
+Tomatoes – 2 medium (chopped)
+
+Green Chillies – 2
+
+Mint & Coriander leaves – handful
+
+Oil – 3 tbsp
+
+Ghee – 1 tbsp
+
+Instructions
+1. Marinate the Chicken
+
+Mix all marination ingredients in a bowl, add chicken, and rest for 30 minutes (more time = better taste).
+
+2. Cook the Rice
+
+Boil 5–6 cups of water with whole spices and salt.
+
+Add soaked rice and cook till 70% cooked.
+
+Drain and keep aside.
+
+3. Prepare the Biryani Base
+
+Heat oil + ghee in a large pot.
+
+Add sliced onions and fry until golden brown.
+
+Add tomatoes, green chillies, and sauté well.
+
+Add the marinated chicken and cook for 10–12 minutes till oil separates.
+
+Add mint and coriander leaves.
+
+4. Layer the Biryani
+
+Keep the flame low.
+
+Add 1 layer of chicken masala.
+
+Add 1 layer of rice.
+
+Repeat until everything is used.
+
+Top with mint, coriander, fried onions, and 1 tbsp ghee.
+
+5. Dum Cooking (Final Steam)
+
+Seal the pot with a lid.
+
+Cook on low flame for 20–25 minutes.
+
+Turn off the flame and rest for 10 minutes.",
+    "thumbnailUrl": "",
+    "uploadDate": "2025-11-10", 
+    "contentUrl": "https://www.youtube.com/watch?v=95BCU1n268w"
+  }  
+}
+</script>
+	<script type="application/ld+json">
+{
   "@context": "https://schema.org",
   "@type": "ResearchProject",
   "name": "digital marketing",
@@ -348,5 +570,6 @@
 
 
 </html>
+
 
 
