--- a/project.html
+++ b/project.html
@@ -2,6 +2,19 @@
 <html lang="en">
 
 <head>
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "WebSite",
+  "name": "tamilselvang",
+  "url": "https://tamilselvang.netlify.app/",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://tamilselvang.netlify.app/about{search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
 </script>
 	<script type="application/ld+json">
 {
@@ -349,6 +362,7 @@
 
 
 </html>
+
 
 
 
