--- a/about.html
+++ b/about.html
@@ -2,14 +2,6 @@
 <html lang="en">
 
 <head>
-	
-}
-</script>
-	
-}
-</script>
-	
-}
 </script>
 	<script type="application/ld+json">
 {
@@ -174,7 +166,7 @@
                         <div class="feature-item bg-light rounded text-center p-4">
                             <i class="fa fa-3x fa-search text-primary mb-4"></i>
                             <h5 class="mb-3">SEO & Backlinks</h5>
-                            <p class="m-0">Enhances your website’s visibility on search engines to attract organic traffic. Backlinks are links from other websites that boost your site’s authority and improve its search rankings.</p>
+                            <p class="m-0">Top seo companies in chennai help brands boost online visibility through strong backlinks and strategic optimisation. By partnering with trusted seo companies in chennai, businesses can improve rankings, drive organic traffic, and build a powerful digital presence.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
@@ -427,6 +419,7 @@
 
 
 </html>
+
 
 
 
