--- a/about.html
+++ b/about.html
@@ -2,6 +2,33 @@
 <html lang="en">
 
 <head>
+	
+  <!-- Primary Meta Tags -->
+  <title>Your Trusted Digital Growth Partner</title>
+  <meta name="title" content="Your Trusted Digital Growth Partner">
+  <meta name="description" content="Our company is built on a passion for digital growth, creative strategy, and measurable results. We focus on delivering powerful marketing solutions that help businesses strengthen their online presence, connect with the right audience, and achieve long-term success. With a commitment to quality, innovation, and customer satisfaction, we work closely with every client to turn ideas into impactful digital experiences.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tamilselvang.netlify.app/about">
+  <meta property="og:title" content="Your Trusted Digital Growth Partner">
+  <meta property="og:description" content="Our company is built on a passion for digital growth, creative strategy, and measurable results. We focus on delivering powerful marketing solutions that help businesses strengthen their online presence, connect with the right audience, and achieve long-term success. With a commitment to quality, innovation, and customer satisfaction, we work closely with every client to turn ideas into impactful digital experiences.">
+  <meta property="og:image" content="">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://tamilselvang.netlify.app/about">
+  <meta property="twitter:title" content="Your Trusted Digital Growth Partner">
+  <meta property="twitter:description" content="Our company is built on a passion for digital growth, creative strategy, and measurable results. We focus on delivering powerful marketing solutions that help businesses strengthen their online presence, connect with the right audience, and achieve long-term success. With a commitment to quality, innovation, and customer satisfaction, we work closely with every client to turn ideas into impactful digital experiences.">
+  <meta property="twitter:image" content="">
+  
+  <!-- Optional Meta Tags -->
+  <meta name="keywords" content="SEO companies in Chennai">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="language" content="ENGLISH">
+  <meta name="revisit-after" content="1 day days">
+  <meta name="author" content="Tamilselvan">
 </script>
 	<script type="application/ld+json">
 {
@@ -419,6 +446,7 @@
 
 
 </html>
+
 
 
 
